# xnat

./: README.md  pyproject.toml  run.py
config/: config.example.yaml
docs/: CONFIG.md  TROUBLESHOOTING.md
scripts/linux/: run.sh
scripts/windows/: run.bat
src/xnat_shiny_uploader/: config.py  demographics.py  main.py  upload.py  xnat_client.py
